[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Fuentes/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/life.png" type="Texture" id=3]
[ext_resource path="res://Fuentes/SPACEBOY.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/Wall.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
resource_name = "Start"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="HUD" type="Node"]
script = ExtResource( 1 )

[node name="CanvasHUD" type="CanvasLayer" parent="."]

[node name="LabelScore" type="Label" parent="CanvasHUD"]
anchor_left = 0.021
anchor_top = 0.015
anchor_right = 0.139
anchor_bottom = 0.048
margin_left = 0.495998
margin_right = -41.336
margin_bottom = -5.8
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "SCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vida1" type="Sprite" parent="CanvasHUD"]
position = Vector2( 982, 41 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Vida2" type="Sprite" parent="CanvasHUD"]
position = Vector2( 940, 41 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Vida3" type="Sprite" parent="CanvasHUD"]
position = Vector2( 898, 41 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="LabelGameOver" type="Label" parent="CanvasHUD"]
visible = false
anchor_left = 0.288
anchor_top = 0.144
anchor_right = 0.755
anchor_bottom = 0.567
margin_left = 0.0609741
margin_top = -0.234398
margin_right = -239.147
margin_bottom = -127.034
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.243137, 1, 0, 1 )
text = "GAME
OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFInPartida" type="Label" parent="CanvasHUD"]
visible = false
anchor_left = 0.025
anchor_top = 0.144
anchor_right = 1.015
anchor_bottom = 0.575
margin_left = -0.142298
margin_top = 4.53565
margin_right = -506.902
margin_bottom = -127.064
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 1, 0.486275, 0, 1 )
text = "NIVEL
COMPLETADO!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelInicio" type="Label" parent="CanvasHUD"]
visible = false
anchor_left = 0.157
anchor_top = 0.313
anchor_right = 0.897
anchor_bottom = 0.736
margin_left = -0.437317
margin_top = -0.0170288
margin_right = -379.197
margin_bottom = -126.817
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.12549, 0, 1, 1 )
text = "INICIA!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimacionInicio" type="AnimationPlayer" parent="CanvasHUD/LabelInicio"]
anims/Start = SubResource( 5 )

[node name="LabelNombrePista" type="Label" parent="CanvasHUD"]
self_modulate = Color( 1, 1, 1, 0.458824 )
anchor_left = 0.447
anchor_top = 0.015
anchor_right = 0.594
anchor_bottom = 0.038
margin_left = 0.271973
margin_right = -0.256042
margin_bottom = 0.199999
custom_fonts/font = SubResource( 3 )
text = "Nombre de pista"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParedIzq" type="Sprite" parent="CanvasHUD"]
scale = Vector2( 1, 50 )
texture = ExtResource( 5 )
centered = false

[node name="ParedDer" type="Sprite" parent="CanvasHUD"]
position = Vector2( 1012, 0 )
scale = Vector2( 1, 50 )
texture = ExtResource( 5 )
centered = false

[node name="BotonRetry" type="Button" parent="CanvasHUD"]
anchor_left = 0.294
anchor_top = 0.693
anchor_right = 0.462
anchor_bottom = 0.767
margin_left = -0.42453
margin_top = 2.30527
margin_right = -0.456543
margin_bottom = -0.0947266
custom_fonts/font = SubResource( 4 )
text = "REINTENTAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonMenu" type="Button" parent="CanvasHUD"]
anchor_left = 0.508
anchor_top = 0.695
anchor_right = 0.738
anchor_bottom = 0.768
margin_left = -0.192017
margin_top = -3.05176e-05
margin_right = 0.287964
margin_bottom = 0.199982
custom_fonts/font = SubResource( 4 )
text = "MENÃš PRINCIPAL"
__meta__ = {
"_edit_use_anchors_": false
}
